# das_project

./: .gitignore  LICENSE  README.md  log.txt  report_template
docs/: derivatives_check.py
docs/notarscripts/: NN.py  gradient-tracking.py
docs/notarscripts/distributed_algs/: package.xml  setup.cfg  setup.py
docs/notarscripts/distributed_algs/distributed_algs/: the_agent.py
docs/notarscripts/distributed_algs/launch_folder/: max_launch.py
docs/notarscripts/formation/: formation_control_ct.py
report/: main_DAS_report_template.tex
task_1/: Dataset.py  README.md  costs_fn.py  dataset.py  dataset_line.py  gradient_tracking.py  main.py  plot.py  prove.py
task_1/costs/: __init__.py  logistic_regression.py  quadratic.py
task_2/: README.md  aggregative_tracking.py  costs_fn.py  main.py  phi.py
task_2/ros/src/message/: CMakeLists.txt  package.xml
task_2/ros/src/message/msg/: NodeData.msg  PlotterData.msg  Position.msg
task_2/ros/src/surveillance/: package.xml  setup.cfg  setup.py
task_2/ros/src/surveillance/launch/: corridor.launch.py  surveillance.launch.py
task_2/ros/src/surveillance/surveillance/: aggregative_tracking.py  costs_fn.py  functions.py  phi.py  plot.py  plotter.py  warden.py
