<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surveillance</name>
  <version>0.1.0</version>
  <description>
    Distributed algorithm for autonomous robot to move forward targets while
    keeping the team in formation
  </description>
  <maintainer email="mattia.guazzaloca@studio.unibo.it">mettz</maintainer>
  <maintainer email="daniele.paccusse@studio.unibo.it">danpacc00</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
